Sportunities/api/k8s/mercure-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mercure-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mercure
  template:
    metadata:
      labels:
        component: mercure
    spec:
      containers:
        - name: mercure
          image: dunglas/mercure
          command: [ "caddy" ]
          args: [ "run", "--config", "/etc/caddy/Caddyfile.dev", "--adapter", "caddyfile" ]
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
