Sportunities/api/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # allocate the storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            # match the name specify in the file database-persistent-volume-claim 
            claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432 
        
        # assign the storage
        #volumeMounts:
            # mount path designed where inside the container the storage should be available
          #- mountPath: /var/lib/postgresql/data
            # subPath mean that any data in mountPath will be stored in a folder postgres inside the PVC
            # specific to postgres
          #  subPath: postgres
          #  name: postgres-storage
        volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/Data
