Sportunities/api/k8s/mercure-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportunities-mercure
spec:
  type: ClusterIP
  selector:
    component: mercure
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
